syntax = "proto3";
package com.shark.game.service;

message EnterGameRoomRequest {
  string token = 1;
  int32 roomType = 2;
}

message EnterGameRoomResponse {
  int32 status = 1;
  string message = 2;
}

service EnterGameRoomService {
  rpc start(EnterGameRoomRequest) returns (EnterGameRoomResponse);
}
